# Pallas-Bot

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  bot.py  bot_hub.py  bot_worker.py  docker-compose.full.gpu.yml  docker-compose.full.yml  docker-compose.shard.example.yml  docker-compose.yml  pyproject.toml
.claude/skills/: pallas-plugin-development
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docker-image.yml  health-check.yml  publish-pypi-core.yml  release.yml  sync-docs-to-web.yml
config/: ai_extension.example.json  community_plugin_index.example.json  community_plugin_index.json  compose.env.example  llm_tool_overrides.example.json  pallas.example.toml
data/pallas_knowledge/: .gitignore  README.md  example.md
deploy/: README.md
deploy/default/: README.md
deploy/message-scrub/: README.md  pallas.fragment.toml
deploy/pg/: README.md  extensions.sql
deploy/shard/: README.md  pallas.fragment.toml
docs/: Config.md  Deployment.md  DockerDeployment.md  FAQ.md  Migration-v3.md  README.md
docs/architecture/: README.md  arknights-knowledge-mcp.md  bot_process_sharding.md  central-ingress-dispatch.md  common-layers.md  control-plane-corpus-federation.md  core-devx-roadmap.md  core-plugin-unification-design.md  group-style-persona.md  help-image-v3-plan.md  hot-reload-tiers.md  ingress-pipeline.md  llm-efficiency-roadmap.md  next-gen-slimdown.md  pallas-4.0-roadmap.md  pallas-4.0-slim.md  pallas-ai-implementation.md  pallas-cli.md  pallas-core-contract.md  pallas-final-ai-shape.md  pallas-package-layout.md  persona-llm-roadmap.md  persona-reply-style.md  plugin-convention.md  plugin-governance-community-roadmap.md  plugin-hot-reload-implementation.md  project-structure.md  settings-storage.md  site-customization-and-updates.md
docs/common/: README.md  community_stats.md
docs/develop/: README.md  environment.md  extension-pypi-publish.md  knowledge-sources.md  webui.md  workflow.md
docs/developer/: index.md
docs/guide/: 4.0-migration.md  4.0-start.md  advanced.md  ai.md  community-plugin-author.md  community-plugin-store.md  concepts.md  connect-qq.md  install-extensions.md  install-plugins.md  llm-and-repeater.md  llm-migrate-from-ollama.md  quickstart.md  usage.md  web-console.md  welcome.md
docs/maintainer/: quickstart.md
docs/plans/: llm-chat-persona-injection-plan.md  llm-feedback-learning-roadmap.md  persona-shaping-long-term.md
docs/plugins/: README.md  TEMPLATE.md
docs/user/: README.md
local/: README.md
local/patches/: README.md
openspec/: pallas-console-v1.json
pallas/: __init__.py
pallas/api/: __init__.py  ai_runtime_health.py  platform_fleet_probe.py  presence.py
pallas/core/: __init__.py
resource/arknights/: enemies_handbook.json  operators.json  operators_6star.json
resource/message_scrub/: politics.txt
resource/persona/: affect_lexicon_baseline.txt
resource/voices/: path_structure.txt
resource/who_is_spy/: undercover_words.json
scripts/: README.md  apply_shard_worker_ports.py  build_core.sh  cache_ark_lore_for_duel.py  calc_worker_count.py  detect_shard_redis.py  fetch_arknights_duel_data.py  generate_pallas_help_style.py  ingress_dispatch_status.py  migrate_shard_to_unified.py  migrate_unified_to_shard.py  pallas  prune_shard_coord.py  rebalance_shard_registry.py  run_sharded_bot.sh  run_unified_bot.sh  shard_coord_snapshot.py  shard_observability_snapshot.py  shard_observability_status.py  shard_process_guard.py  shard_registry_presence_diff.py  shard_registry_repair.py  shard_startup_ports.py  shard_test_enter.sh  shard_test_leave.sh  shard_test_migrate_ports.py  shard_test_worker.py  sync_arknights_data.py  sync_shard_protocol_ports.py  sync_unified_protocol_ports.py  wait_shard_worker_ports.py
scripts/lib/: shard_cmds.sh  shard_lib.sh
src/common/: __init__.py  arknights_skill_text.py  ban_gate_snapshot.py  bot_version.py  command_prefix.py  env_dotenv.py  group_message_dedup.py  inbound_filter.py  multi_bot_group.py  multi_bot_message_claim.py  pallas_console_login.py  pallas_login_page.py  webui_env_sections.py
templates/pallas-plugin-extension/: README.md  pyproject.toml
templates/pallas-plugin-extension/readmes/: pallas-plugin-ai-media.md  pallas-plugin-bot-status.md  pallas-plugin-draw.md  pallas-plugin-dream.md  pallas-plugin-duel.md  pallas-plugin-maa.md  pallas-plugin-protocol.md  pallas-plugin-who-is-spy.md
templates/pallas-plugin-extension/src/pallas_plugin_TEMPLATE/: __init__.py  config.py
tests/: conftest.py  test_ai_task_registry.py  test_log_error_source.py  test_port_alloc_wait.py  test_repeater_learn_queue.py  test_repeater_learn_runtime_config.py  test_shard_ai_task_registry.py  test_shard_log_view.py  test_shard_log_view_root.py  test_shard_port_alloc.py  test_shard_process_guard.py  test_shard_registry.py  test_shard_registry_test_worker.py  test_shard_startup_ports.py  test_shard_startup_ports_order.py  test_shard_sync_protocol_ports.py  test_smoke.py  test_sync_protocol_ports.py  test_webui_log_errors_api.py
tools/: apply_deploy_profile.py  build_webui_dist.sh  check_console_openapi_drift.py  check_plugin_identity_imports.py  check_plugin_imports.py  clean_llm_feedback.py  clean_pg_corpus.py  community_plugin_author.py  compact_llm_feedback.py  cpu_corpus_bench.py  eval_repeater_local.py  eval_repeater_persona.py  export_pb_webui_openapi.py  export_persona_bundle.py  generate_release_changelog.sh  import_legacy_accounts.py  integration_llm_chat.py  integration_repeater_llm.py  integration_shard_llm_chat.py  message_path_bench.py  migrate_env_to_pallas.py  migrate_extension_imports.sh  migrate_image_cache_to_bytea.py  migrate_mongo_to_pg.py  migrate_pallas_package_layout.py  normalize_plugin_metadata.py  notion_cleanup_done_tasks.py  notion_mcp_call.py  plugin_perf_audit.py  render_community_index_readme.py  report_promotion_candidates.py  resolve_webui_ref.sh  seed_community_corpus.py
(+1795 files in other folders)
