[project]
name = "pallas-bot"
version = "4.0.0"
description = "《明日方舟》帕拉斯 Bot"
authors = [{ name = "MistEO" }]
maintainers = [
    { name = "mxcoras", email = "mxcoras@outlook.com" },
    { name = "TogetsuDo", email = "togetsudo@outlook.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiosmtplib>=5.0.0",
    "beanie>=2.0.0",
    "httpx[socks]>=0.28.1",
    "jieba>=0.42.1",
    "nb-cli>=1.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.60.3",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot2[fastapi]>=2.4.4",
    "nvidia-ml-py>=13.595.45",
    "pillowmd>=0.7.3",
    "pyncm-async @ https://files.pythonhosted.org/packages/52/14/8892c8bef54293eaf13c3ff95685a097d8a48272ce07b8600138f5c24d3e/pyncm_async-1.8.2.tar.gz#sha256=3ea9914f3fbcd4a76ef1d34a4681cff3733507b54caa9aa79f1d04f0e8cd27a7",
    "pypinyin>=0.55.0",
    "python-multipart>=0.0.20",
    "python-ulid>=3.1.0",
    "psutil>=6.1.0",
    "tenacity>=9.1.2",
    "curl-cffi>=0.9.0",
    "aiohttp>=3.13.5",
    "nonebot-plugin-localstore>=0.7",
    "nonebot-plugin-htmlrender>=0.7.0a2",
    "githubkit>=0.13,<0.14",
    "mdit-py-emoji>=0.1",
]

[project.optional-dependencies]
perf = [
    "jieba-next>=1.0.0a5"
]
pg = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]
coord-redis = [
    "redis>=5.2,<6",
]
shard = []
deploy-shard = [
    "redis>=5.2,<6",
]
deploy-shard-pg = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.2,<6",
]

[project.scripts]
pallas = "pallas.console.cli.main:main"

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "ruff>=0.11.13",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mongomock-motor>=0.0.30",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.nonebot]
plugin_dirs = ["packages"]
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-status = ["nonebot_plugin_status"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pallas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
