[project]
name = "pallas-plugin-TEMPLATE"
version = "4.0.1"
description = "Pallas-Bot 官方扩展插件模板"
requires-python = ">=3.12,<4.0"
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.6",
]
# 扩展在 Pallas-Bot 环境内运行，pallas.api.* 由主仓 pallas/ 提供。
# 将来 pallas-core 发布到 PyPI 后，取消下一行注释：
#     "pallas-core>=4.0.0,<5.0.0",

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pallas_plugin_TEMPLATE"]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
pallas-plugin-template = ["pallas_plugin_TEMPLATE"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]
